--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,17 @@ MONGODB_CONNECTION=mongodb+srv://.../hub_fulqrom
 NODE_ENV=development
 PORT=30001
 CLIENT_URL=http://localhost:5173
+
+# Email Configuration
+EMAIL_PROVIDER=console
+EMAIL_FROM_ADDRESS=noreply@fulqrom.com
+EMAIL_FROM_NAME=Fulqrom Hub
+APP_BASE_URL=http://localhost:3000
+
+# SendGrid Configuration (if using SendGrid)
+SENDGRID_API_KEY=your_sendgrid_api_key_here
+
+# AWS SES Configuration (if using SES)
+AWS_REGION=ap-southeast-2
+AWS_ACCESS_KEY_ID=your_aws_access_key_id
+AWS_SECRET_ACCESS_KEY=your_aws_secret_access_key
