--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "joi-objectid": "^4.0.2",
     "mongoose": "^7.5.0",
     "multer": "^2.0.2",
+    "nodemailer": "^7.0.7",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
