multi tenant fixes

--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ NODE_ENV=development
 PORT=30001
 
 # Database
-MONGODB_CONNECTION=mongodb+srv://username:password@cluster.mongodb.net/database_name
+MONGODB_CONNECTION=
 
 # Client/Frontend URL
 CLIENT_URL=http://localhost:5173
