--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "auth0": "^5.0.0",
     "bcrypt": "^6.0.0",
     "compression": "^1.7.4",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
@@ -49,11 +50,11 @@
     "uuid": "^13.0.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1",
-    "jest": "^29.7.0",
-    "supertest": "^7.0.0",
     "@types/jest": "^29.5.0",
-    "@types/supertest": "^6.0.0"
+    "@types/supertest": "^6.0.0",
+    "jest": "^29.7.0",
+    "nodemon": "^3.0.1",
+    "supertest": "^7.0.0"
   },
   "engines": {
     "node": ">=18.0.0"
