--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-oauth2-jwt-bearer": "^1.6.0",
+    "geoip-lite": "^1.4.10",
     "helmet": "^7.0.0",
     "joi": "^17.13.3",
     "joi-objectid": "^4.0.2",
@@ -47,6 +48,7 @@
     "multer": "^2.0.2",
     "node-cron": "^3.0.3",
     "nodemailer": "^7.0.7",
+    "ua-parser-js": "^2.0.6",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
