--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-oauth2-jwt-bearer": "^1.6.0",
+    "express-rate-limit": "^8.2.1",
     "geoip-lite": "^1.4.10",
     "helmet": "^7.0.0",
     "joi": "^17.13.3",
