--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "helmet": "^7.0.0",
     "joi": "^17.13.3",
     "joi-objectid": "^4.0.2",
+    "json2csv": "^6.0.0-alpha.2",
     "mongoose": "^7.5.0",
     "multer": "^2.0.2",
     "node-cron": "^3.0.3",
